src/test/ui/lifetime-errors/ex3-both-anon-regions-one-is-struct-2.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions-one-is-struct-2.rs:14:9
   |
13 | fn foo(mut x: Ref, y: &u32) {
   |               ---     ----
   |               |
   |               these two types are declared with different lifetimes...
14 |     y = x.b; //~ ERROR lifetime mismatch
   |         ^^^ ...but data from `x` flows into `y` here

error: aborting due to previous error

